# RemoteBackupServer

./: .gitignore  BackupServer.cpp  BackupServer.h  CMakeLists.txt  Connection.cpp  Connection.h  Folder.cpp  Folder.h  Message.cpp  Message.h  SafeCout.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  main.cpp
sec_files/: dh2048.pem  user.crt  user.key
